batch details button

--- a/fiori-app-inTake/inTake/webapp/css/style.css
+++ b/fiori-app-inTake/inTake/webapp/css/style.css
@@ -6,6 +6,12 @@
     border-radius: 0;
 }
 
+
+.batchdetailsCheckbox{
+	position: absolute;
+    right: 30%;
+}
+
  .noTitle{
 	padding-right: 9%;
 }
